# foodservice

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  bacon.toml  compose.yaml  run_tests.ps1  run_tests.sh  smoke_test.hurl  test_inventory.py
.github/workflows/: ci.yml
binaries/gateway-bin/: Cargo.toml
binaries/gateway_bin/: Cargo.toml  Dockerfile
binaries/gateway_bin/src/: main.rs
binaries/inventory-bin/: Cargo.toml
binaries/inventory_bin/: Cargo.toml  Dockerfile
binaries/inventory_bin/migrations/: 20260411191250_Initial_Inventory.sql
binaries/inventory_bin/src/: main.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: lib.rs
crates/inventory/: Cargo.toml
crates/inventory/src/: client.rs  dto.rs  lib.rs  protocol.rs  traits.rs
crates/inventory/src/dto/: gateway_dto.rs  mod.rs
crates/inventory_svc/: Cargo.toml
crates/inventory_svc/migrations/: 20260411191250_Initial_Inventory.sql
crates/inventory_svc/src/: lib.rs
services/gateway-svc/: Cargo.toml
services/gateway-svc/src/: main.rs
services/inventory-svc/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/tests/: cli_tests.rs
