[workspace]
resolver = "3"
members = ["crates/gateway", "crates/inventory", "binaries/gateway_bin", "binaries/inventory_bin", "crates/inventory_svc", "xtask"]

[workspace.dependencies]

gateway = { path = "crates/gateway" }

# -- Error handling -- #
anyhow = { default-features = false, version = "^1" }
thiserror = "2"

# -- GraphQL -- #
async-graphql = { default-features = false, version = "^7.2.1" }
async-graphql-axum = { default-features = false, version = "^7.2.1" }

# -- Web framework -- #
axum = { default-features = false, version = "^0.8" }

# -- Async runtime -- #
tokio = { version = "1", features = ["rt-multi-thread", "macros"] , default-features = false }
tokio-macros = { default-features = false, version = "^2" }
uuid = { default-features = false, features = ["v7"], version = "^1.23.0" }
sqlx = { default-features = false, features = ["postgres", "runtime-tokio"], version = "^0.8.6" }
async-trait = { default-features = false, version = "^0.1" }
clap = { default-features = false, version = "^4.6.1" }
reqwest = { default-features = false, version = "^0.13.2" }
