[package]
name = "xtask"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true, default-features = true }
assert_cmd = "2.2.1"
clap = { features = ["derive"] , workspace = true, default-features = true }
predicates = "3.1.4"
reqwest = { workspace = true, features = ["json"], default-features = true }
serde_json = "1"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"], default-features = true }
