[package]
name = "inventory_bin"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true, default-features = true }
async-trait = { workspace = true, default-features = true }
axum = { workspace = true, features = ["http1", "macros", "tokio"], default-features = true }
inventory = { path = "../../crates/inventory" }
inventory_svc = { path = "../../crates/inventory_svc" }
sqlx.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] , default-features = true }
uuid = { workspace = true, default-features = true }

[dev-dependencies]
sqlx = { workspace = true, features = ["postgres", "runtime-tokio", "uuid"], default-features = true }
tower = { workspace = true, default-features = true }
