[package]
name = "inventory"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.default-features = true
anyhow.workspace = true
async-trait.workspace = true
async-trait.default-features = true
reqwest = { workspace = true, default-features = true }
uuid.default-features = true
uuid.workspace = true
