[package]
name = "inventory"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.default-features = true
anyhow.workspace = true
async-trait.workspace = true
async-trait.default-features = true
bincode = { workspace = true, default-features = true }
reqwest = { workspace = true, default-features = true }
serde = { workspace = true, default-features = true }
uuid = { workspace = true, features = ["serde"], default-features = true }

[dev-dependencies]
axum = { workspace = true, features = ["http1", "tokio"], default-features = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"], default-features = true }
